--- a/index.html
+++ b/index.html
@@ -54,8 +54,23 @@
         <section class="jumbotron developer short" id="main">
 
           <div class="col-md-12">
-          <span><h2>#Don’tTrustCable</h2></span>
+          <span><h2>#DontTrustCable</h2></span>
           <h2>Memo: Cable companies are the ones trying to kill net neutrality. If you see something on cable news against net neutrality, don’t believe it.</h2>
+          <br>
+        </div>
+        <div class="col-md-12 share">
+        <a class="facebook" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fwww.donttrustcable.com" target="_blank">
+          Share on Facebook
+        </a>
+
+        <a class="twitter" href="https://twitter.com/intent/tweet?text=Don%E2%80%99t%20let%20Comcast%20take%20over%20half%20of%20America%E2%80%99s%20Internet.%20Tell%20Congress%20%26%20%40FCC%20to%20%23StoptheTakeover%E2%80%9D%20https%3A%2F%2Fwww.donttrustcable.com" target="_blank">
+          Share on Twitter
+        </a>
+
+        <a class="googleplus" href="https://plus.google.com/share?url=https%3A%2F%2Fwww.donttrustcable.com" target="_blank">
+          Share on Google+
+        </a>
+
           <br>
           </div>
          
@@ -130,20 +145,20 @@
         </div>
       </div>
     </footer>
-
+<!--
     <ul class="sharing-buttons">
       <li>
-        <a class="facebook" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fwww.googleweneedyoutoo.com" target="_blank">
+        <a class="facebook" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fwww.donttrustcable.com" target="_blank">
           <img alt="" src="./images/share/facebook.png"> <span class="text">&nbsp; Share on Facebook</span>
         </a>
       </li>
       <li>
-        <a class="twitter" href="https://twitter.com/intent/tweet?text=Don%E2%80%99t%20let%20Comcast%20take%20over%20half%20of%20America%E2%80%99s%20Internet.%20Tell%20Congress%20%26%20%40FCC%20to%20%23StoptheTakeover%E2%80%9D%20https%3A%2F%2Fwww.googleweneedyoutoo.com" target="_blank">
+        <a class="twitter" href="https://twitter.com/intent/tweet?text=Don%E2%80%99t%20let%20Comcast%20take%20over%20half%20of%20America%E2%80%99s%20Internet.%20Tell%20Congress%20%26%20%40FCC%20to%20%23StoptheTakeover%E2%80%9D%20https%3A%2F%2Fwww.donttrustcable.com" target="_blank">
           <img alt="" src="./images/share/twitter.png"> <span class="text">&nbsp; Share on Twitter</span>
         </a>
       </li>
       <li>
-        <a class="pressthis" href="http://www.addtoany.com/add_to/wordpress?linkurl=https%3A%2F%2Fwww.googleweneedyoutoo.com&linkname=Stop%20the%20Comcast%20takeover.&linknote=Don%E2%80%99t%20let%20Comcast%20take%20over%20half%20of%20America%E2%80%99s%20Internet.%20Tell%20Congress%20%26%20%40FCC%20to%20%23StoptheTakeover%E2%80%9D" target="_blank">
+        <a class="pressthis" href="http://www.addtoany.com/add_to/wordpress?linkurl=https%3A%2F%2Fwww.donttrustcable.com&linkname=Stop%20the%20Comcast%20takeover.&linknote=Don%E2%80%99t%20let%20Comcast%20take%20over%20half%20of%20America%E2%80%99s%20Internet.%20Tell%20Congress%20%26%20%40FCC%20to%20%23StoptheTakeover%E2%80%9D" target="_blank">
           <img alt="" src="./images/share/pressthis.png"> <span class="text">&nbsp; Press This</span>
         </a>
       </li>
@@ -153,17 +168,17 @@
         </a>
       </li>
       <li>
-        <a class="googleplus" href="https://plus.google.com/share?url=https%3A%2F%2Fwww.googleweneedyoutoo.com" target="_blank">
+        <a class="googleplus" href="https://plus.google.com/share?url=https%3A%2F%2Fwww.donttrustcable.com" target="_blank">
           <img alt="" src="./images/share/google-plus.png"> <span class="text">&nbsp; Share on Google+</span>
         </a>
       </li>
       <li>
-        <a class="reddit" href="https://www.reddit.com/submit?url=https%3A%2F%2Fwww.googleweneedyoutoo.com&amp;title=Don%E2%80%99t%20let%20Comcast%20take%20over%20half%20of%20America%E2%80%99s%20Internet.%20Tell%20Congress%20%26%20%40FCC%20to%20%23StoptheTakeover%E2%80%9D" target="_blank">
+        <a class="reddit" href="https://www.reddit.com/submit?url=https%3A%2F%2Fwww.donttrustcable.com&amp;title=Don%E2%80%99t%20let%20Comcast%20take%20over%20half%20of%20America%E2%80%99s%20Internet.%20Tell%20Congress%20%26%20%40FCC%20to%20%23StoptheTakeover%E2%80%9D" target="_blank">
           <img alt="" src="./images/share/reddit.png"> <span class="text">&nbsp; Share on Reddit</span>
         </a>
       </li>
     </ul>
-
+-->
    <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
