--- a/index.html
+++ b/index.html
@@ -7,20 +7,20 @@
     <meta name="description" content="Don’t Trust Cable">
     <meta name="author" content="Fight for the Future">
 
-    <meta property="og:title" content="Don’t Trust Cable"/>
+    <meta property="og:title" content="Don't Trust Cable"/>
     <meta property="og:type" content="website"/>
-    <meta property="og:url" content="https://www.battleforthenet.com/googleemployees/"/>
-    <meta property="og:image" content=""/>
-    <meta property="og:site_name" content="Battle For The Net"/>
+    <meta property="og:url" content="https://www.DontTrustCable.com"/>
+    <meta property="og:image" content="https://www.donttrustcable/images/twitter-memo.jpg"/>
+    <meta property="og:site_name" content="Don't Trust Cable"/>
     <meta property="fb:admins" content="612663871"/>
-    <meta property="og:description" content="Don’t Trust Cable"/>
+    <meta property="og:description" content="Get The Memo: #DontTrustCable"/>
 
-    <meta property="twitter:creator" content="demandprogress" />
+    <meta property="twitter:creator" content="fightforthefuture" />
     <meta property="twitter:title" content="Don’t Trust Cable" />
-    <meta property="twitter:description" content="Don’t Trust Cable" />
+    <meta property="twitter:description" content="Get The Memo: #DontTrustCable" />
     <meta itemprop="name" content="Don’t Trust Cable">
-    <meta itemprop="description" content="Don’t Trust Cable">
-    <meta itemprop="image" content="https://www.battleforthenet.com/images/share_images/map.png">
+    <meta itemprop="description" content="Get The Memo: #DontTrustCable">
+    <meta itemprop="image" content="https://www.donttrustcable/images/twitter-memo.jpg">
 
 
 
@@ -63,7 +63,7 @@
           Share on Facebook
         </a>
 
-        <a class="share-btn twitter" href="https://twitter.com/intent/tweet?text=Don%E2%80%99t%20let%20Comcast%20take%20over%20half%20of%20America%E2%80%99s%20Internet.%20Tell%20Congress%20%26%20%40FCC%20to%20%23StoptheTakeover%E2%80%9D%20https%3A%2F%2Fwww.donttrustcable.com" target="_blank">
+        <a class="share-btn twitter" href="https://twitter.com/home?status=Get%20The%20Memo:%20https://donttrustcable.com%0A%23DontTrustCable" target="_blank">
           Share on Twitter
         </a>
 
@@ -106,7 +106,7 @@
                     Share on Facebook
                   </a>
 
-                  <a class="share-btn twitter" href="https://twitter.com/intent/tweet?text=Don%E2%80%99t%20let%20Comcast%20take%20over%20half%20of%20America%E2%80%99s%20Internet.%20Tell%20Congress%20%26%20%40FCC%20to%20%23StoptheTakeover%E2%80%9D%20https%3A%2F%2Fwww.donttrustcable.com" target="_blank">
+                  <a class="share-btn twitter" href="https://twitter.com/home?status=Get%20The%20Memo:%20https://donttrustcable.com%0A%23DontTrustCable" target="_blank">
                     Share on Twitter
                   </a>
 
