og:image URL Fix

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta property="og:title" content="Don't Trust Cable"/>
     <meta property="og:type" content="website"/>
     <meta property="og:url" content="https://www.DontTrustCable.com"/>
-    <meta property="og:image" content="https://www.donttrustcable/images/twitter-memo.jpg"/>
+    <meta property="og:image" content="https://www.donttrustcable.com/images/twitter-memo.jpg"/>
     <meta property="og:site_name" content="Don't Trust Cable"/>
     <meta property="fb:admins" content="612663871"/>
     <meta property="og:description" content="Get The Memo: #DontTrustCable"/>
@@ -20,7 +20,7 @@
     <meta property="twitter:description" content="Get The Memo: #DontTrustCable" />
     <meta itemprop="name" content="Don’t Trust Cable">
     <meta itemprop="description" content="Get The Memo: #DontTrustCable">
-    <meta itemprop="image" content="https://www.donttrustcable/images/twitter-memo.jpg">
+    <meta itemprop="image" content="https://www.donttrustcable.com/images/twitter-memo.jpg">
 
 
 
