--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 </p><p>
                 Bottom line: if you’re looking for real people and real arguments in the net neutrality debate, steer clear of cable news, and spread the word: #Don’tTrustCable
                 </p><h3>
-                This has been a Public Service Announcement from <a target="_blank" href="https://fightforthefuture.org">fightforthefuture.org</a>.
+                This has been a Public Service Announcement from <a target="_blank" href="https://fightforthefuture.org">fightforthefuture.org</a>.</p>
                 <div class="col-md-12 share">
                   <center>
                   <a class="share-btn facebook" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fwww.donttrustcable.com" target="_blank">
